Fixed the issue where the preview for new/edit issue, team and project wasn't the full height and the text overflowed over the edges. Also cleared all toast errors and messages when the application 1st loads

--- a/client/src/styles/_standardForm.scss
+++ b/client/src/styles/_standardForm.scss
@@ -121,15 +121,20 @@
       width: 50%;
       min-height: 100%;
       height: auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
       padding: 20px;
       overflow: hidden;
 
       &:first-of-type {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
         border-right: 1px solid $light-grey;
+      }
+
+      &:last-of-type {
+        height: 100%;
+        border-right: none;
       }
     }
 
@@ -339,11 +344,18 @@
 
   &__preview-view {
     width: 100%;
-    // height: 100%;
-    // max-height: 100%;
+    height: 100%;
+    max-height: 100%;
     // max-width: 100%;
+    background: $light-grey4 !important;
+    padding: 10px;
+    white-space: pre-wrap;
     flex: 1 1 100%;
     overflow-y: auto;
+
+    p {
+      font-size: 14px;
+    }
 
     &::-webkit-scrollbar {
       width: 7px;
@@ -356,8 +368,6 @@
     &::-webkit-scrollbar-track {
       background: #eee;
     }
-    background: $light-grey4 !important;
-    padding: 5px;
   }
 
   &__btn {
